--- a/clean.code/src/example.tex
+++ b/clean.code/src/example.tex
@@ -5,6 +5,7 @@
 \title[Small Title]{Talk Title}
 \subtitle{Talk Subtitle}
 \author{First Name.Last Name}
+\institute[Inst]{Institute}
 \date{01.01.2019}
 
 \lstset{%
