--- a/corporate/src/example.tex
+++ b/corporate/src/example.tex
@@ -3,20 +3,19 @@
 
 \title[Small Title]{Talk Title}
 \subtitle{Talk Subtitle}
-\author{First Name.Last Name}
+\author[First Name]{First Name.Last Name}
+\institute[Inst]{Institute}
 \date{01.01.2019}
 
 \begin{document}
 
-\begin{frame}[plain]
-  \maketitle
-\end{frame}
+\maketitle
 
 \begin{frame}{The Frame Title}
 
   \begin{enumerate}
     \item First item
-    \item Second item
+    \item \alert{Alert item}
     \item ...
   \end{enumerate}
 
