--- a/light.theme/src/example.tex
+++ b/light.theme/src/example.tex
@@ -1,9 +1,10 @@
 \documentclass[14pt]{beamer}
-\usetheme{LightRound}
+\usetheme[shape=circle]{LightTheme}
 
 \title[Small Title]{Talk Title}
 \subtitle{Talk Subtitle}
 \author{First Name.Last Name}
+\institute[Inst]{Institute}
 \date{01.01.2019}
 
 \begin{document}
@@ -11,6 +12,9 @@
 \begin{frame}[plain]
   \maketitle
 \end{frame}
+
+\section{Section Frame}
+\frame{\sectionpage}
 
 \begin{frame}{The Frame Title}
 
