--- a/code.course/src/example.tex
+++ b/code.course/src/example.tex
@@ -1,22 +1,11 @@
 \documentclass[14pt]{beamer}
 \usepackage[T1]{fontenc}
-\usepackage[quiet]{mathspec}
-
-\setmainfont[
-ItalicFont={Yanone Kaffeesatz Light},
-Scale=1.3,
-LetterSpace=2.0
-]{Yanone Kaffeesatz Bold}
-
-\setmonofont{Fira Code}
-
 \usetheme{CodeCourse}
-
-\usefonttheme{serif}
 
 \title[Small Title]{Talk Title}
 \subtitle{Talk Subtitle}
 \author{First Name.Last Name}
+\institute[Inst]{Institute}
 \date{01.01.2019}
 
 \begin{document}
